--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,5 +1,6 @@
 body{
     color:#5264AE;
+    min-width: 768px;
 }
 
 .container-fluid{
@@ -354,10 +355,10 @@ input:focus ~ .highlight {
     align-self: center;
     font-size: 22px;
     font-weight: 400;
-    line-height: 1;
+    line-height: 50px;
     width: 210px;
     height: 50px;
-
+    vertical-align: middle;
     padding-left: 60px;
     text-decoration: none;
     text-align: center;
