home_carousel_completed

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1288,11 +1288,11 @@ footer p {
 }
 .hashtags{
   display: inline-block;
-  height: 60%;
-  margin: 4px 3px 14px 3px;
-  font-size: 14px;
+  height: 50%;
+  margin: 6px 3px 16px 3px;
+  font-size: 13px;
   font-weight: 600;
-  line-height: 27px;
+  line-height: 23px;
   color: white;
   padding: 0px 4px;
   border-radius: 5%;
@@ -1301,7 +1301,18 @@ footer p {
   box-shadow: 0px 0px 2px 0px black;
 }
 .boardinfo{
-  color: black;
+  color: rgb(126, 126, 126);
   margin-top: 7px;
   margin-bottom: 18px;
+}
+
+#homeCarousel{
+  background: #3C93D5;
+  margin: 0 auto;
+  margin-top: 55px;
+  max-width: 800px;
+}
+#mycarousel{
+  width: 100%;
+  height: 330px;
 }
