--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -80,6 +80,7 @@ body {
   color: rgb(0, 0, 0);
   height: 45px;
   float: left;
+  padding: 8px 70px;
   line-height: 45px;
   text-align: center;
   font-size: 16px;
@@ -105,6 +106,9 @@ body {
   transition: 0.4s ease-in-out;
   -webkit-transition-delay: 0.4s, 0s, 0.4s;
   transition-delay: 0.4s, 0s, 0.4s;
+}
+.headerItem img{
+  margin-bottom: 6px;
 }
 
 .onSearchForm {
@@ -725,36 +729,6 @@ small {
   }
 }
 
-@media (min-width: 720px) and (max-width : 768px) {
-  .contentBox {
-    width: 50%;
-  }
-}
-
-@media (max-width: 719px) {
-  .contentBox {
-    width: 100%;
-  }
-}
-
-@media (min-width: 769px) and (max-width : 970px) {
-  .contentBox {
-    width: 100%;
-  }
-}
-
-@media (min-width: 971px) and (max-width : 1329px) {
-  .contentBox {
-    width: 50%;
-  }
-}
-
-@media (min-width: 1330px) {
-  .contentBox {
-    width: 33%;
-  }
-}
-
 .contentTitle {
   height: 20px;
   font-size: 17px;
@@ -1245,11 +1219,11 @@ footer p {
   margin: 0 auto;
   height: 92px;
   background: white;
-  border: rgba(117, 117, 117, 0.493) solid 1px;
+  border: rgba(141, 141, 141, 0.281) solid 1px;
   border-width: 0px 1px 1px 1px;
 }
 .boardentity:first-child{
-  border-top:  rgba(117, 117, 117, 0.493) solid 1px;
+  border-top:  rgba(141, 141, 141, 0.281) solid 1px;
 }
 
 .boardthumnail{
@@ -1284,7 +1258,6 @@ footer p {
   height: 50%;
   float: left;
   overflow: hidden;
-  display: inline;
 }
 .hashtags{
   display: inline-block;
@@ -1307,12 +1280,123 @@ footer p {
 }
 
 #homeCarousel{
-  background: #3C93D5;
-  margin: 0 auto;
-  margin-top: 55px;
-  max-width: 800px;
+  height: 330px;
 }
 #mycarousel{
   width: 100%;
   height: 330px;
+}
+#homecontainer{
+  margin: 0 auto;
+  margin-top: 55px;
+  max-width: 800px;
+  display: block;
+}
+.homeBox{
+  width: 360px;
+  height: 280px;
+  float: left;
+}
+#homecontainer:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+.homeBoxcontent{
+  width: 320px;
+  height: 260px;
+  margin: 10px auto;
+}
+
+.homeBoxcontent .homeBoxrow{
+  height: 75px;
+  border: rgba(163, 163, 163, 0.171) solid 1px;
+  border-width: 0px 1px 1px 1px;
+}
+.homeBoxcontent p{
+  font-size: 16px;
+  font-weight: 600;
+  color: rgba(90, 90, 90, 0.925);
+  border-bottom: rgba(163, 163, 163, 0.171) solid 1px;
+}
+.homeBoxcontent p a{
+  font-weight: 700;
+  color: rgba(65, 65, 65, 0.925);
+}
+.homeBoxrow .homeBoxthum{
+  
+  float: left;
+}
+.homeBoxrow .homeBoxtitle{
+  width: 245px;
+  line-height: 75px;
+  font-size: 17px;
+  font-weight: 600;
+  overflow: hidden;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  color: rgb(99, 99, 99);
+}
+.homeBoxrow:hover{
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 720px) and (max-width : 768px) {
+  .contentBox {
+    width: 50%;
+  }
+  .homeBox{
+    width: 50%;
+  }
+}
+
+@media (max-width: 719px) {
+  .contentBox {
+    width: 100%;
+  }
+  .homeBox{
+    width: 100%;
+  }
+}
+
+@media (min-width: 769px) and (max-width : 970px) {
+  .contentBox {
+    width: 100%;
+  }
+  .homeBox{
+    width: 100%;
+  }
+}
+
+@media (min-width: 971px) and (max-width : 1329px) {
+  .contentBox {
+    width: 50%;
+  }
+  .homeBox{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1330px) {
+  .contentBox {
+    width: 33%;
+  }
+  .homeBox{
+    width: 50%;
+  }
 }
