--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -88,6 +88,10 @@ body {
   font-weight: bold;
   border-bottom: 1px solid #b4b4b46c;
 }
+#logoBox:hover{
+  cursor: pointer;
+  opacity: 0.8;
+}
 
 .headerItem {
   /* reset the text-align */
@@ -109,6 +113,10 @@ body {
 }
 .headerItem img{
   margin-bottom: 6px;
+}
+.headerItem img:hover{
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 .onSearchForm {
@@ -1050,7 +1058,7 @@ footer p {
 
 }
 #articlecontent img{
-    width: 100% !important;
+    width: auto !important;
 }
 
 
@@ -1253,6 +1261,12 @@ footer p {
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
+
+.boardboxtitle:hover, .boardthumnail:hover{
+  cursor: pointer;
+}
+
+
 .boardboxetc{
   width: 100%;
   height: 50%;
@@ -1343,6 +1357,7 @@ footer p {
   cursor: pointer;
   opacity: 0.8;
 }
+
 
 
 
