--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -29,7 +29,7 @@ body {
   left: 0;
   height: 100vh;
   z-index: 1000;
-  background: rgb(241, 241, 241);
+  background: #f1f1f1;
   color: rgb(0, 0, 0);
   transition: all 0.3s;
   overflow-x: hidden;
@@ -978,7 +978,7 @@ footer p {
   background: rgb(241, 241, 241);
 }
 
-#articlecontainer {
+.articlecontainer {
   margin: 45px auto 0px auto;
   max-width: 900px;
   background: rgb(241, 241, 241);
@@ -1324,10 +1324,10 @@ footer p {
 
 
 
-.errorcontainer{
-  max-width: 720px;
+#errorcontainer{
   margin: 0px auto;
   margin-top: 105px;
+  max-width: 720px;
 }
 .errorheader{
   font-size: 80px;
@@ -1346,8 +1346,7 @@ footer p {
 }
 .errormessege{
   width: 360px;
-  margin:0 auto;
-  float: left;
+  margin-left: calc(50% - 180px);
   margin-bottom: 20px;
 }
 .errorcontentbottom{
@@ -1361,6 +1360,10 @@ footer p {
   width: 200px;
   margin-left: calc(50% - 100px);
 }
+
+
+
+
 .carousel-item img{
 width: 100%;
 padding: 10px;
@@ -1451,11 +1454,57 @@ padding: 10px;
   text-align: justify;
   text-align-last: center;
   font-size: 14px;
+  line-height: 22px;
 }
 .shapedtext p a{ 
   color: rgb(102, 102, 102);
 }
-
+.highlighttag{
+  font-weight: 700;
+  color: rgb(70, 70, 70);
+  font-size: 15px;
+}
+.searchresultentity{
+  max-width: 550px;
+  height: 130px;
+  padding: 0px 5px;
+}
+.resulttitle{
+  width: 100%;
+  height: 35px;
+  
+  line-height: 35px;
+  font-size: 18px;
+  font-weight: 600;
+  overflow: hidden;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  color: rgb(15, 89, 199);
+}
+.resultinfo{
+  width: 100%;
+  height: 25px;
+  font-weight: 600;
+  font-size: 13px;
+  color: rgb(100, 114, 91);
+  padding-left: 2px;
+}
+.resultcontent{
+  width: 100%;
+  height: 40px;
+  
+  line-height: 20px;
+  font-size: 12px;
+  font-weight: 500;
+  overflow: hidden;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  color: rgb(59, 59, 59);
+}
 
 
 
@@ -1517,4 +1566,18 @@ padding: 10px;
   .homeBox{
     width: 50%;
   }
+}
+@media (min-width: 940px) {
+  .errormessege{
+    margin:0px auto;
+    float: left;
+  }
+  
+
+
+#errorcontainer:after {
+  content: "";
+  clear: both;
+  display: block;
+}
 }
