--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1023,6 +1023,10 @@ footer p {
   padding-top: 13px;
 
 }
+#articleinfoname a{
+  
+  color: rgb(68, 68, 68);
+}
 #articleinfodate{
   color: rgb(107, 107, 107);
   font-size: 14px;
@@ -1262,6 +1266,10 @@ footer p {
   margin-bottom: 18px;
   width: 120px;
 }
+.boardinfo a{
+  color: #585858;
+
+}
 
 #homeCarousel{
   height: 330px;
@@ -1271,6 +1279,9 @@ footer p {
   height: 330px;
   background: white;
   
+}
+.carousel-indicators li{
+  background-color: rgb(255, 172, 172);
 }
 #homecontainer{
   margin: 0 auto;
@@ -1378,11 +1389,12 @@ padding: 10px;
   height: 330px;
 }
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='999999' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fac' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e") !important; 
+  color: black;
 }
 
 .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='999999' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fac' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e") !important;
 }
 .carousel-caption h3{
   color: rgb(73, 73, 73);
@@ -1497,6 +1509,12 @@ padding: 10px;
   font-size: 13px;
   color: rgb(100, 114, 91);
   padding-left: 2px;
+  float: left;
+  overflow: hidden;
+}
+.resultinfo a{
+
+  color: rgb(100, 114, 91);
 }
 .resultcontent{
   width: 100%;
@@ -1513,7 +1531,11 @@ padding: 10px;
 }
 .searchtag{
   color: rgb(100, 114, 91);
+  display: inline-block;
   
+}
+#searchcharactor{
+  width: 50px;
 }
 
 
