--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -40,7 +40,31 @@ body {
 }
 
 /* 추가된 부분 */
+#sidebarfooter{
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
 
+  text-align: center;
+  margin-top: auto;
+}
+#sidebarfooter p{
+  margin: 0px;
+  font-size: 12px;
+  font-weight: 400;
+  
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(94, 94, 94);
+
+}
+#sidebarfooter img:hover{
+  cursor: pointer;
+
+}
 #line-wrapper {
   cursor: pointer;
   width: 25px;
