--- a/src/main/webapp/resources/css/info.css
+++ b/src/main/webapp/resources/css/info.css
@@ -420,9 +420,9 @@ body{
 }
 
 #profilebox {
-    width: calc(100% - 180px);
+    width: calc(100% - 188px);
     height: 178px;
-    float: right;
+    float: left;
     padding-left: 30px;
     margin-top: 7px;
     color: rgb(83, 83, 83);
@@ -447,7 +447,6 @@ body{
     width: 26px;
     height: 30px;
     line-height: 30px;
-    padding-left: 20px;
     text-align: center;
     color: rgb(63, 63, 63);
     float:left;
@@ -463,7 +462,6 @@ body{
     line-height: 32px;
     text-align: left;
     margin: 0px;
-    padding-left: 20px;
     margin-bottom: 25px;
 
 }
@@ -486,20 +484,32 @@ body{
     width: 100%;
     overflow: hidden;
     float: left;
-    margin-top: 20px;
     display: none;
 }
-
+#introduceself .content{
+    width: 100%;
+    float: left;
+    margin-top: 25px;
+}
 #introduceself p {
     color:rgb(51, 51, 51);
     margin: 0px;
     font-size: 13px;
     vertical-align: top;
     line-height: 18px;
+    font-weight: 600;
 }
-#introduceself p b{
-    font-weight: 700;
-    font-size: 14px;
+#introduceself .title{
+    width: 140px;
+    height: 110px;
+    float: left;
+
+    margin-bottom: 10px;
+    margin-right: 35px;
+     color:rgb(109, 109, 109);
+     font-size: 20px;
+     line-height: 20px;
+     text-align: right;
 }
 
 #introduceself.expand {
@@ -696,7 +706,7 @@ body{
 #explainbox{
     width: calc(100% - 30px);
     height: calc(100% - 30px);
-    padding: 15px;
+    padding: 15px 15px 0px 15px;
     text-align: center;
 }
 #explainbox p {
@@ -906,19 +916,23 @@ body{
     .starlabel {
         display: block;
         margin-left: 2px;
-    }
+    }/* 
     #profilebox {
         display: none;
     }
     #myface {
         margin-left: calc(50% - 70px);
-    }
+    } */
     .profilecontent p {
         overflow: hidden;
         word-break: break-all;
     }
     #explainbox .devboxs p{
         font-size: 10px !important;
+    }
+    #thirdbox .about{
+        padding: 25px 10px 10px 10px;
+        width: calc(100% - 20px);
     }
 }
 
@@ -941,6 +955,16 @@ body{
     }
     #preloadingback p{
         font-size: 13px;
+    }
+    #profilebox .icons {
+        padding-left: 0px;
+    }
+    #profilebox #title{
+        
+        padding-left: 0px;
+    }
+    #introduceself .title{
+        height: 175px;
     }
 }
 
@@ -976,6 +1000,31 @@ body{
         height: auto;
         min-height: 0px;
     }
+    #profilebox #title {
+        font-size: 23px;
+    }
+    #profilebox #title b{
+        font-size: 11px;
+    }
+    #profilebox .entity{
+        font-size: 11px;
+    }
+    #introduceself p{
+        font-size: 11px;
+    }
+    #introduceself .title{
+        width: 100%;
+        font-size: 14px;
+        height: 20px;
+        text-align: left;
+    }
+    #profilebox{
+        margin-top: 0px;
+    }
+    #myface {
+        margin-left: calc(50% - 160px);
+    }
+
     
 #explainbox p:first-child {
     font-size: 17px;
